# rangepy

./: .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  setup.py
rangepy/: __init__.py  core.py  sources.py  species_resolver.py
tests/: test_core.py  test_sources.py  test_species_resolver.py
