[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rangepy"
version = "0.1.0"
description = "A minimal Python library for retrieving species range maps as GeoPandas dataframes"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    {name = "Timm Haucke", email = "haucke@mit.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "geopandas>=0.10.0",
    "sciencebasepy>=2.0.0",
    "requests>=2.25.0",
    "shapely>=1.8.0",
    "pandas>=1.3.0",
    "pooch>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.setuptools.packages.find]
include = ["rangepy*"]
